try to fix flag rendering issue on mobile

--- a/app/frontend/src/components/NameInfo.css
+++ b/app/frontend/src/components/NameInfo.css
@@ -15,8 +15,7 @@
 }
 
 .country-flag {
-  font-size: 1.2em;
-  line-height: 14px;
+  line-height: 15px;
   margin-top: 2px;
   vertical-align: middle;
   border: 1px solid #ccc;
